--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,8 +1,9 @@
 header {
-  background-color: var(--basecolor);
-  height: 80px;
+  background-color: var(--color-base)
+  height: 50px;
 }
 
-p {
+h1 {
+  font-family: var(--font-base);
   color: var(--color2);
 }
