--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
+@import "./style/base.css";
 @import "./style/components/header.css";
 @import "./style/components/navigation.css";
-@import "./style/base.css";
-@import "./style/fonts.css";
+@import "./style/components/fonts.css";
