--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,9 +1,13 @@
 header {
-  background-color: var(--color-base)
-  height: 50px;
+  display: flex;
+  background-color: var(--color-base);
+  width: 100%;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px;
 }
 
 h1 {
-  font-family: var(--font-base);
-  color: var(--color2);
+  font-family: var(--font-comic-bo);
+  color: var(--color-second);
 }
