--- a/style/components/question.css
+++ b/style/components/question.css
@@ -46,3 +46,7 @@ article .material-symbols-outlined.not-selected {
   font-size: 1rem;
   padding: 0.5rem 1rem;
 }
+
+.hidden {
+  visibility: hidden;
+}
