--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 @import "./style/base.css";
 @import "./style/components/fonts.css";
 @import "./style/components/form.css";
 @import "./style/components/header.css";
 @import "./style/components/nav.css";
+@import "./style/components/profile.css";
 @import "./style/components/question.css";
