--- a/style/components/nav.css
+++ b/style/components/nav.css
@@ -37,7 +37,7 @@ nav ul li {
 
 .navigation .material-symbols-outlined {
   padding: 1rem 1rem;
-  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
+  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
 
 .navigation a {
@@ -52,6 +52,6 @@ nav ul li {
   background-color: darkslateblue;
 }
 
-.current a {
+.nav__button--highlight a {
   color: white;
 }
