--- a/style/components/profile.css
+++ b/style/components/profile.css
@@ -1,10 +1,10 @@
-.profile-header {
+.profile__header {
   display: flex;
   justify-items: center;
   align-items: center;
 }
 
-.profile-image {
+.profile__image {
   width: 100px;
   margin-right: 1rem;
   border-radius: 1rem;
